--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,3 @@
-# Web framework
 fastapi
-uvicorn[standard]
-
-# Networking / requests
-httpx
-requests
-
-# Data handling
-pandas
-numpy
-
-# Graphs
+uvicorn
 networkx
-
-# Machine learning / AI (optional, if used in your project)
-scikit-learn
-joblib
-
-# Utilities
-python-dotenv
